<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:title="@string/tchr_main_nav_upd"
            android:id="@+id/nav_upd"
            android:icon="@mipmap/update_icon"
            />
        <item
            android:title="@string/tchr_main_nav_upld"
            android:id="@+id/nav_upld"
            android:icon="@mipmap/upload_icon"
            />
        <item
            android:title="@string/tchr_main_nav_get"
            android:id="@+id/nav_get"
            android:icon="@mipmap/get_icon"
            />
        <item
            android:title="@string/tchr_main_nav_exit"
            android:id="@+id/nav_exit"
            android:icon="@mipmap/exit"
            />
    </group>
</menu>