<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".act.tchr.Tchr_upload">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--title-->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/showg"
            android:paddingTop="210sp"
            android:text="@string/tchr_upload_title"
            android:textColor="@color/royalblue"
            android:textSize="25sp" />

        <RelativeLayout
            android:id="@+id/relative_classify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible"
            android:layout_below="@id/title">

            <LinearLayout
                android:id="@+id/linear_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/padding1"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">
                <Button
                    android:id="@+id/btn_select"
                    android:layout_width="300sp"
                    android:layout_height="50sp"
                    android:fontFamily="@font/showg"
                    android:gravity="center"
                    android:backgroundTint="@color/btn_bg_color_selector"
                    android:text="@string/tchr_upload_select"
                    android:textColor="@color/btn_txt_color_selector"
                    >
                </Button>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="10dp">
                </TextView>
                <TextView
                    android:id="@+id/txt_path"
                    android:layout_width="300sp"
                    android:layout_height="40sp"
                    android:fontFamily="@font/califr"
                    android:gravity="center"
                    android:hint="@string/tchr_upload_txt_hint"
                    android:background="@color/lightgrey"
                    android:textColor="@color/black">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="10dp">
                </TextView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_gravity="center_horizontal">
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:text="@string/tchr_upload_txt_clsid"
                        android:fontFamily="@font/showg"
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:textSize="15sp">
                    </TextView>
                    <EditText
                        android:id="@+id/edt_clsid"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/califr"
                        android:digits="@string/rule_cls_id"
                        android:hint="@string/tchr_upload_txt_id_hint"
                        android:textSize="12sp"
                        android:gravity="center">
                    </EditText>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="10dp">
                </TextView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_gravity="center_horizontal">
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:text="@string/tchr_upload_txt_name"
                        android:fontFamily="@font/showg"
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:textSize="15sp">
                    </TextView>
                    <EditText
                        android:id="@+id/edt_clsname"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/califr"
                        android:hint="@string/tchr_upload_txt_name_hint"
                        android:textSize="12dp"
                        android:gravity="center">
                    </EditText>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/padding1"
                android:layout_width="300dp"
                android:layout_height="10dp"
                android:layout_centerHorizontal="true">
            </TextView>

            <TextView
                android:id="@+id/padding2"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@id/linear_1"
                android:layout_centerHorizontal="true">
            </TextView>
            <Button
                android:id="@+id/btn_upload"
                android:layout_width="300sp"
                android:layout_height="50sp"
                android:layout_below="@+id/padding2"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/btn_bg_color_selector"
                android:fontFamily="@font/showg"
                android:text="@string/tchr_upload_btn_upld"
                android:textColor="@color/btn_txt_color_selector" />
        </RelativeLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>