<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".act.tchr.Tchr_get">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--title-->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/showg"
            android:paddingTop="70dp"
            android:text="@string/tchr_get_title"
            android:textColor="@color/royalblue"
            android:textSize="25sp">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:id="@+id/padding0"
            android:layout_below="@+id/title">
        </TextView>

        <ScrollView
            android:id="@+id/scroll_result"
            android:layout_width="300dp"
            android:layout_height="450dp"
            android:layout_below="@id/padding0"
            android:layout_centerInParent="true"
            android:background="@color/lightgrey"
            android:visibility="visible">

            <TextView
                android:id="@+id/txt_result"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:fontFamily="@font/califr"
                android:hint="@string/tchr_get_result_empty"
                android:textColor="@color/black" />
        </ScrollView>
        <Button
            android:id="@+id/btn_back"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@id/scroll_result"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/btn_bg_color_selector"
            android:fontFamily="@font/showg"
            android:text="@string/tchr_get_back"
            android:textColor="@color/btn_txt_color_selector" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>