<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".act.login.TchrRegister">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--title-->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/showg"
            android:paddingTop="230sp"
            android:text="@string/register_tchr_title"
            android:textColor="@color/royalblue"
            android:textSize="25sp"/>
        <RelativeLayout
            android:id="@+id/relative_classify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible"
            android:layout_below="@id/title">
            <!-- id-->
            <LinearLayout
                android:id="@+id/linear_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/padding1">
                <TextView
                    android:layout_width="100sp"
                    android:layout_height="40sp"
                    android:gravity="center"
                    android:text="@string/register_tchr_id"
                    android:fontFamily="@font/showg"
                    android:textColor="@color/black"
                    android:textSize="20sp">
                </TextView>
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="match_parent">
                </TextView>
                <TextView
                    android:id="@+id/txt_id"
                    android:layout_width="190sp"
                    android:layout_height="40sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:fontFamily="@font/califr"
                    android:text="@string/register_null"
                    android:background="@color/lightgrey"
                    android:gravity="center">
                </TextView>
            </LinearLayout>
            <!-- name-->
            <LinearLayout
                android:id="@+id/linear_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/linear_id">
                <TextView
                    android:layout_width="100sp"
                    android:layout_height="40sp"
                    android:gravity="center"
                    android:text="@string/register_tchr_name"
                    android:fontFamily="@font/showg"
                    android:textColor="@color/black"
                    android:textSize="20sp">
                </TextView>
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="match_parent">
                </TextView>
                <EditText
                    android:id="@+id/edt_name"
                    android:layout_width="190sp"
                    android:layout_height="40sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:fontFamily="@font/califr"
                    android:gravity="center">
                </EditText>
            </LinearLayout>
            <!-- pwd-->
            <LinearLayout
                android:id="@+id/linear_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/linear_name">
                <TextView
                    android:layout_width="100sp"
                    android:layout_height="40sp"
                    android:gravity="center"
                    android:text="@string/register_tchr_pwd"
                    android:fontFamily="@font/showg"
                    android:textColor="@color/black"
                    android:textSize="20sp">
                </TextView>
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="match_parent">
                </TextView>
                <EditText
                    android:id="@+id/edt_pwd"
                    android:layout_width="190sp"
                    android:layout_height="40sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:fontFamily="@font/califr"
                    android:gravity="center"
                    android:digits="@string/rule_pwd"
                    android:inputType="textPassword"
                    android:maxLength="18">
                </EditText>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linear_pwd2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/linear_pwd">
                <TextView
                    android:layout_width="100sp"
                    android:layout_height="40sp"
                    android:gravity="center"
                    android:text="@string/register_tchr_pwd2"
                    android:fontFamily="@font/showg"
                    android:textColor="@color/black"
                    android:textSize="14sp">
                </TextView>
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="match_parent">
                </TextView>
                <EditText
                    android:id="@+id/edt_pwd2"
                    android:layout_width="190sp"
                    android:layout_height="40sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:fontFamily="@font/califr"
                    android:gravity="center"
                    android:digits="@string/rule_pwd"
                    android:inputType="textPassword"
                    android:maxLength="18">
                </EditText>
            </LinearLayout>
            <!-- gender-->
            <LinearLayout
                android:id="@+id/linear_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/linear_pwd2">
                <TextView
                    android:layout_width="100sp"
                    android:layout_height="40sp"
                    android:gravity="center"
                    android:text="@string/register_tchr_gender"
                    android:fontFamily="@font/showg"
                    android:textColor="@color/black"
                    android:textSize="20sp">
                </TextView>
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="match_parent">
                </TextView>
                <Spinner
                    android:id="@+id/spn_gen"
                    android:layout_width="190sp"
                    android:layout_height="40sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:fontFamily="@font/califr"
                    android:gravity="center">
                </Spinner>
            </LinearLayout>

            <TextView
                android:id="@+id/padding2"
                android:layout_width="300sp"
                android:layout_height="10sp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/linear_gender">
                </TextView>
            <TextView
                android:id="@+id/padding1"
                android:layout_width="300sp"
                android:layout_height="10sp"
                android:layout_centerHorizontal="true">
            </TextView>

            <Button
                android:id="@+id/btn_done"
                android:layout_width="300sp"
                android:layout_height="50sp"
                android:layout_below="@+id/padding2"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/btn_bg_color_selector"
                android:fontFamily="@font/showg"
                android:text="@string/register_tchr_done"
                android:textColor="@color/btn_txt_color_selector" />
        </RelativeLayout>




    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>